--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,17 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
+    - name: Pull request coverage report
+      id: jacoco
+      uses: madrapps/jacoco-report@v1.6.1
+      with:
+        paths: ${{ github.workspace }}/target/site/jacoco/jacoco.xml
+        token: ${{ secrets.ACCESS_TOKEN_GITHUB }}
+        min-coverage-overall: 40
+        min-coverage-changed-files: 60
+        title: '# Coverage Report'
+        pass-emoji: ':white_check_mark:'
+        fail-emoji: ':x:'
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
