--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,32 +21,44 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+
     - name: Build with Maven
       run: mvn clean install
+
     - name: Pull request coverage report
       id: jacoco
       uses: madrapps/jacoco-report@v1.6.1
       with:
         paths: ${{ github.workspace }}/target/site/jacoco/jacoco.xml
         token: ${{ secrets.ACCESS_TOKEN_GITHUB }}
-        min-coverage-overall: 40
-        min-coverage-changed-files: 60
-        title: '# Coverage Report'
+        min-coverage-overall: 80
+        min-coverage-changed-files: 80
+        # will be used in pull_request comment:
+        title: '## Coverage Report :test_tube:'
         pass-emoji: ':white_check_mark:'
         fail-emoji: ':x:'
+    - name: Is PR overall coverage less than 80% check
+      if: ${{ steps.jacoco.outputs.coverage-overall < 80.0 }}
+      uses: actions/github-script@v6
+      with:
+        script: core.setFailed('Overall coverage is less than 80%')
+
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+
     - name: Build and push
       uses: docker/build-push-action@v6
       with:
